--- a/public/css/style.css
+++ b/public/css/style.css
@@ -52,7 +52,6 @@ h2 {
 
 /* page 404 */
 #retourHome {
-  
   color: brown;
   width: 100%;
   display: inline-block;
@@ -69,5 +68,37 @@ h2 {
 }
 
 .bienVoir {
-  color: crimson
+  color: crimson;
+}
+
+.gameArea {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: space-around;
+}
+.parcours {
+  border: 1px solid black;
+  width: 35%;
+  height: 80%;
+}
+
+.ligne {
+  display: flex;
+  justify-content: space-between;
+}
+
+.left {
+  /* background-color: greenyellow; */
+  width: 50%;
+  height: 3.5em;
+  align-content: center;
+  border: 1px solid black;
+}
+.right {
+  /* background-color: orangered; */
+  width: 50%;
+  height: 3.5em;
+  align-content: center;
+  border: 1px solid black;
 }
