players apparaissent et bougent

--- a/views/jeu.pug
+++ b/views/jeu.pug
@@ -1,113 +1,7 @@
 extends template.pug 
 block content 
-    p.bienVoir  Que la partie commence ...
-    .gameArea
-      #joueur1.parcours
-        .joueurID PlayerId
-        |         
-        div
-          .ligne
-            .left bloc10
-            |                 
-            .right bloc10 bis
-          |             
-          .ligne
-            .left bloc9
-            |                 
-            .right bloc9 bis
-          |             
-          .ligne
-            .left bloc8
-            |                 
-            .right bloc8 bis
-          |             
-          .ligne
-            .left bloc7
-            |                 
-            .right bloc7 bis
-          |             
-          .ligne
-            .left bloc6
-            |                 
-            .right bloc6 bis
-          |             
-          .ligne
-            .left bloc5
-            |                 
-            .right bloc5 bis
-          |             
-          .ligne
-            .left bloc4
-            |                 
-            .right bloc4 bis
-          |             
-          .ligne
-            .left bloc3
-            |                 
-            .right bloc3 bis
-          |             
-          .ligne
-            .left bloc2
-            |                 
-            .right bloc2 bis
-          |             
-          .ligne
-            .left bloc1
-            |                 
-            .right bloc1 bis
-      |     
-      #joueur2.parcours
-        .joueurID PlayerId
-        |         
-        div
-          .ligne
-            .left bloc10
-            |                 
-            .right bloc10 bis
-          |             
-          .ligne
-            .left bloc9
-            |                 
-            .right bloc9 bis
-          |             
-          .ligne
-            .left bloc8
-            |                 
-            .right bloc8 bis
-          |             
-          .ligne
-            .left bloc7
-            |                 
-            .right bloc7 bis
-          |             
-          .ligne
-            .left bloc6
-            |                 
-            .right bloc6 bis
-          |             
-          .ligne
-            .left bloc5
-            |                 
-            .right bloc5 bis
-          |             
-          .ligne
-            .left bloc4
-            |                 
-            .right bloc4 bis
-          |             
-          .ligne
-            .left bloc3
-            |                 
-            .right bloc3 bis
-          |             
-          .ligne
-            .left bloc2
-            |                 
-            .right bloc2 bis
-          |             
-          .ligne
-            .left bloc1
-            |                 
-            .right bloc1 bis   
+    p.startGame  Commencer la partie commence ...
+    #gameArea
+    img#poupee(src='/img/poupee.jpg' alt='poupee mortelle') 
     script(src='/socket.io/socket.io.min.js')
     script(defer src='/js/index.js')
