--- a/public/css/style.css
+++ b/public/css/style.css
@@ -70,13 +70,40 @@ h2 {
 .bienVoir {
   color: crimson;
 }
+.startGame{
+  width: 400px;
+  margin-left: 2em;
+  color:ghostwhite;
+  background-color: darkolivegreen;
+  text-align: center;
+  border-radius: 15px 15px;  
+}
+.startGame:hover{
+  cursor:pointer;
+  
+}
 
-.gameArea {
+#gameArea {
   width: 100%;
-  height: 100%;
+  height: 900px;
   display: flex;
   justify-content: space-around;
+  margin: auto;
+  border: 3px solid red;
+  
 }
+
+#poupee {
+  height: 250px;
+  width: 100px;
+  background-image: url(/img/poupee);
+  position: absolute;
+  top: 50%;
+  left: 1200px ;
+  
+}
+
+
 .parcours {
   border: 1px solid black;
   width: 35%;
