--- a/views/404.pug
+++ b/views/404.pug
@@ -2,4 +2,4 @@ extends template.pug
 block content 
     h1 La page s&eacute;lectionn&eacute;e &agrave; d&eacute;j&agrave; &eacute;limin&eacute; tous ses participants ...
     a#retourHome(href='/accueil') Soldat, Ramenez-le en zone s&ucirc;re
-    img#soldat(src='/img/soldat-triangle.jpg' alt='soldat triangle' srcset='')
+    img.soldat(src='/img/soldat-triangle.jpg' alt='soldat au symbole triangle sur le casque')
