--- a/views/template.pug
+++ b/views/template.pug
@@ -14,7 +14,7 @@ nav
     li
       a(href='/register') Inscription des Recrues
 h1 Squid Game
-h2 Qui survivra le plus longtemps ?
+h2 Qui franchira la ligne en vie ?
 block content
 block footer 
 
