--- a/views/jeu.pug
+++ b/views/jeu.pug
@@ -1,6 +1,7 @@
 extends template.pug 
 block content 
     h1=message
+    ul#presence
     p#startGame  Commencer la partie ...
     #gameArea
     img#poupee(src='/img/poupee.jpg' alt='poupee mortelle') 
