--- a/views/register.pug
+++ b/views/register.pug
@@ -6,8 +6,8 @@ block content
     form(action='/register' method='POST')
         label(for='gamertag') Nom de Joueur :
         input#gamertag(type='text' name='gamertag' required='')
-        label(for='numero') Num&eacute;ro de joueur  (de 1 &agrave; 256) :
-        input#numero(type='number' name='numero' max='256' required='')
+        //- label(for='numero') Num&eacute;ro de joueur  (de 1 &agrave; 256) :
+        //- input#numero(type='number' name='numero' max='256' required='')
         label(for='email') E-mail
         input#email(type='email' name='email' required='')
         label(for='password') Mot de passe : 
