--- a/views/template.pug
+++ b/views/template.pug
@@ -9,8 +9,8 @@ nav
   ul
     li
       a(href='/accueil') Page d&apos;accueil
-    //- li
-    //-   a#launcher(href='/jeu') Testez vos chances de survie
+    li
+      a(href='/jeu') Commencer la partie
     li
       a(href='/register') Inscription des Recrues
 h1 Squid Game
