route avec cookie ok

--- a/views/template.pug
+++ b/views/template.pug
@@ -10,7 +10,7 @@ nav
     li
       a(href='/accueil') Page d&apos;accueil
     li
-      a(href='/jeu') Commencer la partie
+      a(href='/jeu') Rendez-vous dans la zone de jeu
     li
       a(href='/register') Inscription des Recrues
 h1 Squid Game
