chang fonction avec setinterval

--- a/views/accueil.pug
+++ b/views/accueil.pug
@@ -14,4 +14,5 @@ block content
         //- label(for='password') Mot de passe : 
         //- input#password(type='password' name='password' required)
         //- button(type='submit') Ob&eacute;ir
-    #centre
+    //- #centre
+    img.accueil(src='/img/poupee.jpg' alt='poupee squid game')
