--- a/views/jeu.pug
+++ b/views/jeu.pug
@@ -4,6 +4,7 @@ block content
     ul#presence
     p#startGame  Commencer la partie ...
     #gameArea
+    #messagecache
     img#poupee(src='/img/poupee.jpg' alt='poupee mortelle') 
     script(src='/socket.io/socket.io.min.js')
     script(defer src='/js/index.js')
