recherche ip machine serveur

--- a/views/template.pug
+++ b/views/template.pug
@@ -13,6 +13,8 @@ nav
       a(href='/jeu') Rendez-vous dans la zone de jeu
     li
       a(href='/register') Inscription des Recrues
+    li
+      a(href='/highscore') Meilleures Recrues
 h1 Squid Game
 h2 Qui franchira la ligne en vie ?
 block content
