--- a/views/highscore.pug
+++ b/views/highscore.pug
@@ -2,3 +2,4 @@ extends template.pug
 block content 
     h2.bienVoir  Prendre exemple sur le Hall of Fame !
     div#highscore
+        ul#topPlayers
