render pug gagnants route highscore

--- a/views/highscore.pug
+++ b/views/highscore.pug
@@ -2,4 +2,15 @@ extends template.pug
 block content 
     h2.bienVoir  Prendre exemple sur le Hall of Fame !
     div#highscore
-        ul#topPlayers
+        ol#topPlayers
+            li=premier
+            li=deuxieme
+            li=troisieme
+            li=quatrieme
+            li=cinquieme
+            li=sixieme
+            li=septieme
+            li=huitieme
+            li=neuvieme
+            li=dixieme
+            
