--- a/views/template.pug
+++ b/views/template.pug
@@ -8,7 +8,7 @@ head
 nav
   ul
     li
-      a(href='/accueil') Page d&apos;accueil
+      a(href='/') Page d&apos;accueil
     li
       a(href='/jeu') Rendez-vous dans la zone de jeu
     li
