--- a/views/jeu.pug
+++ b/views/jeu.pug
@@ -6,5 +6,5 @@ block content
     #gameArea
     #messagecache
     img#poupee(src='/img/poupee.jpg' alt='poupee mortelle') 
-    script(src='/socket.io/socket.io.min.js')
+    script(defer src='/socket.io/socket.io.min.js')
     script(defer src='/js/index.js')
