--- a/views/accueil.pug
+++ b/views/accueil.pug
@@ -16,3 +16,4 @@ block content
         //- button(type='submit') Ob&eacute;ir
     //- #centre
     img.accueil(src='/img/poupee.jpg' alt='poupee squid game')
+    script(defer src='/js/index.js')
